--- a/index.html
+++ b/index.html
@@ -190,6 +190,15 @@
             <iframe src="https://www.wsbtv.com/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="100%" allowfullscreen></iframe>
         </section>
 
+        <section>
+            <a target="_bLank"
+                href="https://rank-fortress-digital-agency.github.io/atlantatileinstaller-01-22/">https://rank-fortress-digital-agency.github.io/atlantatileinstaller-01-22/</a><br>
+            <a target="_bLank"
+                href="http://atlantatileinstaller-01-22.s3-website-us-west-2.amazonaws.com/">http://atlantatileinstaller-01-22.s3-website-us-west-2.amazonaws.com/</a><br>
+            <a target="_bLank"
+                href="https://poetic-dasik-d15701.netlify.app/">https://poetic-dasik-d15701.netlify.app/</a>
+        </section>
+
 
     </div>
 </body>
